<resources>
    <string name="app_name">TestApp</string>
    <string name="miru_mir">Миру мир!</string>
    <string name="userName">Имя пользователя</string>
    <string name="passText">Введите пароль!</string>
    <string name="input">Войти!</string>
    <string name="Privet_mudak">Привет, %s !</string>
    <string name="Test_test1">Test1_Label, %s !</string>
    <string name="radioButtTest1">Test1</string>
    <string name="radioButtTest2">Test2</string>
    <string name="checktext1">CheckText1</string>
    <string name="checktext2">checktext2</string>
    <string name="checktext3">checktext3</string>
    <string name="textviewtest4">Test1OrTest2Checked</string>
    <string name="textbuttontest">textButtonTest</string>
    <string name="textviewtext1">TextViewText1</string>
    <string name="textviewtext2">textviewtext2</string>
    <string name="textviewtext3">textviewtext3</string>
    <string name="textviewtext4">textviewtext4</string>
    <string name="error">Заполните все поля</string>
    <array name="arrayTest1">
        <item>Test11item</item>
        <item>Test12item</item>
        <item>Test13item</item>
        <item>Test14item</item>
    </array>
    <array name="arrayTest2">
        <item>Test21item</item>
        <item>Test22item</item>
        <item>Test23item</item>
        <item>Test24item</item>
    </array>
</resources>
