<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textViewPrivet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:text="@string/Privet_mudak"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioGroupTest12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textViewPrivet">

        <RadioButton
            android:id="@+id/rbTest1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/radioButtTest1"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbTest2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/radioButtTest2"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewTest3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Test_test1"
        android:textSize="30sp"
        android:textAlignment="center"
        android:padding="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="15dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/radioGroupTest12"
        />
    <CheckBox
        android:id="@+id/checktext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checktext1"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/textViewTest3"
        app:layout_constraintEnd_toStartOf="@id/checktext2"
        app:layout_constraintStart_toStartOf="parent"
        />
    <CheckBox
        android:id="@+id/checktext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checktext2"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/textViewTest3"
        app:layout_constraintStart_toEndOf="@id/checktext1"
        app:layout_constraintEnd_toStartOf="@id/checktext3"
        />
    <CheckBox
        android:id="@+id/checktext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checktext3"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/textViewTest3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checktext2"
        />
    <TextView
        android:id="@+id/textViewTest4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textviewtest4"
        android:textSize="30sp"
        android:textAlignment="center"
        android:padding="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="15dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/checktext2"
        />
    <Spinner
        android:id="@+id/spinnerTest1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/arrayTest1"
        app:layout_constraintTop_toBottomOf="@id/textViewTest4"
        />
    <Spinner
        android:id="@+id/spinnerTest2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/arrayTest2"
        app:layout_constraintTop_toBottomOf="@id/textViewTest4"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textbuttontest"
        />
</androidx.constraintlayout.widget.ConstraintLayout>